k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kas-kelas
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
